# treefi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
nbs/: sample.ipynb
src/treefi/: __init__.py  adapters.py  api.py  exceptions.py  metrics.py  models.py  results.py  schema.py  traversal.py
tests/: conftest.py  test_adapters.py  test_cv.py  test_docs.py  test_exceptions.py  test_metrics.py  test_models.py  test_optional_frames.py  test_prek.py  test_readme_doctest.py  test_realish_adapter_parity.py  test_results.py  test_sklearn_integration.py  test_titanic_functional.py  test_traversal.py  test_validation.py
